packages/webcomponents/pronote-summary/src/style.scss
@use 'sass:map';
@use 'common/assets/scss/global' as *;
@import '@fortawesome/fontawesome-svg-core/styles.css';

@keyframes shimmer {
  0% {
    background-position: 100% 0;
  }

  100% {
    background-position: -100% 0;
  }
}

#summary-wrapper {
  display: flex !important;
  flex-direction: column !important;
}

.title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: start;
  flex-direction: row;

  a {
    display: none;
  }
}

.redirect {
  justify-content: end;

  &.mobile-only {
    display: flex;
  }
}

todo pass order .case {
  width: 100%;
  height: auto;
  flex-direction: row;
  display: flex;
  justify-content: space-between;
  align-items: start;
}
.cadre {
  flex-direction: row;
}
.numero {
  order: 2;
  display: none;
  &.mobile-only {
    display: block;
  }
}

.case {
  display: flex;
  height: 1.5em;

  &.loading {
    &:first-child {
      border-radius: 8px 8px 0 0;
    }
    &:last-child {
      border-radius: 0 0 8px 8px;
    }
    background: linear-gradient(90deg, #e9e9e9 30%, #f6f6f6 50%, #e9e9e9 70%);
    background-size: 200% 100%;
    animation: shimmer 1.5s infinite linear;
  }
}

.texte {
  order: 1;
  text-align: left;
  flex: 1;
  justify-content: start;
}

@media (width >= map.get($grid-breakpoints, lg)) {
  .redirect {
    &.mobile-only {
      display: none;
    }
  }

  .title-wrapper {
    a {
      display: unset;
    }
  }
}

@media (width >= map.get($grid-breakpoints, sm)) {
  .cadre {
    display: flex;
    flex-direction: row;
    gap: 12px;
    flex-wrap: wrap;
  }

  .case {
    width: 140px;
    height: 140px;
    box-shadow: var(--#{$prefix}shadow-neutral) HEXToRGBA($black, 0.1);

    border-radius: 8px;

    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
  }

  .numero {
    grid-column: 2;
    grid-row: 2;

    display: flex;
    align-items: center;
    justify-content: center;
    order: unset;

    font-size: 2rem;
    font-weight: bold;

    &.mobile-only {
      display: none;
    }
  }

  .texte {
    order: unset;
    grid-column: 1 / 4;
    grid-row: 3;

    display: flex;
    align-items: center;
    justify-content: center;

    text-align: center;
    padding: 0 6px;
    overflow-wrap: break-word;
  }
}

.is-hidden {
  display: none;
}

.tab-btn-wrapper {
  display: flex;
  flex-direction: row;
  gap: 12px;
  padding-bottom: 12px;
}

